--- a/etc/cec-control.conf
+++ b/etc/cec-control.conf
@@ -23,7 +23,7 @@ PowerOffDevices =
 ScanDevicesAtStartup = false
 # Whether to queue commands during suspend
 QueueCommandsDuringSuspend = true
-# Whether to enable D-Bus power state monitoring for automatic suspend/resume handling
+# Whether to enable power state monitoring via sd-bus for suspend/resume handling
 EnablePowerMonitor = true
 
 [Throttler]
